# Final_Project

./: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
Engine/: Collider.cpp  Collider.hpp  GameEngine.cpp  GameEngine.hpp  Group.cpp  Group.hpp  IScene.cpp  IScene.hpp  Sprite.cpp
Entities/: AirTile.cpp  AirTile.hpp  FlipOrb.cpp  FlipOrb.hpp  GroundTile.cpp  GroundTile.hpp  JumpOrb.cpp  JumpOrb.hpp  Level.cpp  Level.hpp  Obstacle.hpp  Player.cpp  Player.hpp  SpeedDownTile.cpp  SpeedDownTile.hpp  SpeedUpTile.cpp  SpeedUpTile.hpp  SpikeTile.cpp  SpikeTile.hpp  Tile.cpp  Tile.hpp
Resource/: README.md  level1.txt
States/: DeathScreen.cpp  DeathScreen.hpp  Gameplay.cpp  Gameplay.hpp  PauseMenu.cpp  PauseMenu.hpp  PauseSettings.cpp  PauseSettings.hpp  ScoreboardScene.cpp  ScoreboardScene.hpp  SettingScreen.cpp  SettingScreen.hpp  Settings.cpp  Settings.hpp  StageSelect.cpp  StageSelect.hpp  TitleScreen.cpp  TitleScreen.hpp  WinScreen.cpp  WinScreen.hpp
UI/Component/: Image.cpp  Slider.cpp
Utils/: Config.cpp  Config.hpp  Resources.hpp  Timer.hpp
